[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/wavi_narrowmodifier.png" type="Texture" id=1]
[ext_resource path="res://Entity/Enemies/chapter1/mirrorblaster.gd" type="Script" id=2]
[ext_resource path="res://Audio/liito3_shoot.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="mirrorblaster" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="MoveTimer" type="Timer" parent="."]
autostart = true

[node name="sprite" type="Sprite" parent="."]
modulate = Color( 0.133333, 0.133333, 0.133333, 1 )
texture = ExtResource( 1 )

[node name="FireTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="DamageableArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageableArea"]
shape = SubResource( 1 )

[node name="sfxDamaged" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="area_entered" from="DamageableArea" to="." method="_on_DamageableArea_area_entered"]
